# ubc-discovery

./: .gitignore  CLAUDE.md  CONTEXT.md  PLAN.md  README.md  architecture.drawio
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  main.py  pyproject.toml
backend/app/: config.py  database.py  dependencies.py  seed.py
backend/app/models/: __init__.py  connection.py  connection_message.py  event.py  event_rating.py  otp_code.py  saved_event.py  user.py  zone_unlock.py
backend/app/presenters/: __init__.py  event.py
backend/app/routers/: auth.py  connections.py  events.py  matching.py  og.py  ratings.py  recommendations.py  saved_events.py  users.py  zones.py
backend/app/schemas/: auth.py  connection.py  event.py  event_rating.py  recommendation.py  saved_event.py  user.py  zone_unlock.py
backend/app/services/: bedrock.py  email.py  firebase_auth.py  recommender.py  s3.py
backend/scripts/: seed_events.py
backend/tests/: conftest.py  test_auth.py  test_email.py  test_events.py  test_matching.py  test_og.py  test_recommender.py  test_s3.py  test_saved_events.py  test_users.py  test_zones.py
docs/: design-prompt.md
events_scraper/: .env.example  pyproject.toml
events_scraper/src/events_scraper/: analyzer.py  config.py  db.py  loader.py  main.py  models.py  scraper.py
frontend/: .env  .env.example  DESIGN.md  app.config.ts  app.json  package-lock.json  package.json
mobile/: .env.example  .gitignore  DESIGN.md  README.md  package.json
web/: .env.example  .gitignore  README.md  package-lock.json  package.json  playwright.config.ts  (+2 more)
(+136 files in other folders)
