[project]
name = "ubc-newcomers-backend"
version = "0.1.0"
description = "Backend API for UBC Newcomers community app"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.136.1",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic-settings>=2.7.0",
    "boto3>=1.35.0",
    "httpx>=0.28.0",
    "python-multipart>=0.0.18",
    "firebase-admin>=6.5.0",
    "aiosmtplib>=3.0.0",
    "pydantic[email]>=2.0.0",
    "types-boto3[essential,s3]>=1.43.8",
    "nanoid>=2.0.0",
]

[dependency-groups]
dev = [
    "botocore[crt]>=1.43.5",
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
]
