[project]
name = "events-scraper"
version = "0.1.0"
description = "Scrape and enrich UBC club events, then load into the shared database"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.0",
    "beautifulsoup4>=4.12.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "pydantic-settings>=2.7.0",
    "boto3>=1.35.0",
]

[project.scripts]
events-scraper = "events_scraper.main:main"

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"
